# TkinterOS

./: .gitignore  DesktopGUI.py  LICENSE  README.md  credits.txt  desktop.py  main.py  os_controller.py  pybrowse.py  pybrowse_game.py  pyproject.toml  python_game.py  requirements.txt  setup.py  styles.py  task_bar.py
applications/: pybrowse.py  pybrowse_game.py  python_game.py
desktop/: callback_manager.py  callbacks.py  desktop.py  file_manager.py  file_widget.py  task_bar.py  text_editor.py
src/: os_controller.py
src/applications/: pybrowse.py  pybrowse_game.py  python_game.py
src/asset_management/: asset_manager.py  assets.py
src/desktop/: desktop.py  file_widget.py  task_bar.py
src/tkinteros/: main.py  os_controller.py  theme.py
src/tkinteros/applications/: pybrowse.py  pybrowse_game.py  snake_game.py  tictactoe.py
src/tkinteros/applications/tictactoe/: bot.py  controller.py  game.py  game_logic.py  gui.py  tictactoe.py  tictactoe_bot.py  tictactoe_gui.py
src/tkinteros/asset_management/: asset_manager.py  assets.py
src/tkinteros/callback_management/: callback_manager.py  callbacks.py
src/tkinteros/desktop/: desktop.py  task_bar.py
src/tkinteros/file_management/: file.py  file_manager.py
src/tkinteros/gui/: desktop_gui.py  file_widget.py  taskbar_gui.py  text_editor.py
tests/: test_tictactoe.py  test_tictactoe_bot.py
tests/file_manager/: test_file_creation_validation.py
tests/tictactoe/: test_game_logic.py  test_tictactoe.py  test_tictactoe_bot.py
