[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TkinterOS"
version = "0.1"
description = "A Fake Operating System Inspired By GodotOS"
authors = [
    { name = "Simon Milata" }
]
requires-python = ">=3.10"
dependencies = [
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "packaging==25.0",
    "Pillow==11.3.0",
    "playsound==1.2.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]